optimize build scripts