@@ -1,10 +1,3 @@
-import io.github.fvarrui.javapackager.gradle.PackageTask
-
-plugins {
-    id 'application'
-    id 'io.github.fvarrui.javapackager.plugin' version '1.7.6'
-}
-
 group 'homer.tastyworld.frontend'
 version '1.0.0'
 
@@ -20,29 +13,36 @@ javafx {
 
 dependencies {}
 
-task packageToApp(type: PackageTask, dependsOn: build) {
-    mainClass = application.mainClass
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
-    outputDirectory = file(uri("$rootDir/packaged-apps/status-display"))
-    setAppName("TastyWorld-StatusDisplay")
-    displayName = "TastyWorld-StatusDisplay"
-    organizationName = "Homer"
-    jreMinVersion = targetCompatibility
-    additionalModulePaths = [file("$System.env.PATH_TO_FX_MODS")]
-//    administratorRequired = true
-//    fileAssociations =
-//    additionalResources = [ file('file path'), file('folder path'), ... ]
-//    platform = "auto"|"linux"|"mac"|"windows"  // Default is "auto"
+    manifest {
+        attributes(
+                'Main-Class': application.mainClass,
+                "Class-Path": '.'
+        )
+    }
+}
 
-//    linuxConfig {
-//        ...
-//    }
-    macConfig {
-        icnsFile = file(uri("src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.icns"))
+jlink {
+    forceMerge 'slf4j'
+    mergedModule {
+        requires "java.xml"
+        requires "java.desktop"
+        requires "java.sql"
     }
-    winConfig {
-        icoFile = file(uri("src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.ico"))
-        disableRunAfterInstall = false
-        removeOldLibs = true
+    addExtraDependencies("javafx")
+    imageZip = project.file("$rootDir/packaged-apps/status-display/TastyWorld-StatusDisplay-v${version}-${javafx.platform.classifier}.zip")
+    options = [
+            '--strip-debug', '--no-header-files', '--no-man-pages',
+//            '--module-path', "$System.env.PATH_TO_FX_MODS",
+//            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+    launcher {
+        name = 'TastyWorld-StatusDisplay'
     }
+}
+
+jlinkZip {
+    group = 'distribution'
 }
